began template customization.

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS EITHER.  (THANK YOU.)
 carpentry: "lc"    # what kind of Carpentry (must be either "lc" or "dc" or "swc")
-venue: "QULOC-LISWP Library Carpentry Workshop, UQ"        # brief name of host site without address (e.g., "Euphoric State University")
-address: "Training rooms 214-215, Biological Sciences Library, Building 94, St Lucia Campus"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
-country: "au"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
+venue: "Jean and Alexander Heard Library, Vanderbilt University"        # brief name of host site without address (e.g., "Euphoric State University")
+address: "Central Library, 419 21st Ave S, Nashville, TN 37240"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
+country: "us"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "en"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: "-27.4969902,153.0092138"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
-humandate: "3 November 2017"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
-humantime: "9:30 am-4:00 pm"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
-startdate: 2017-11-03      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
-enddate: 2017-11-03  # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
-instructor: ["Belinda Weaver", "Paula Martinez"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["Kylie Poulton", "Julie Toohey", "Richard Vankoningsveld"] # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
-contact: ["bweaver@carpentries.org"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
-collaborative_notes:  "http://pad.software-carpentry.org/liswp"           # optional: URL for the workshop collaborative notes, e.g. an Etherpad or Google Docs document
+latlng: "36.145687,-86.800243"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
+humandate: "April 5-6, 2018"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
+humantime: "9:00 am-4:00 pm"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
+startdate: 2018-04-05      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
+enddate: 2018-04-06  # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
+instructor: ["Veronica Ikeshoji-Orlati"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+helper: ["Elisabeth Shook", "Suellen Stringer-Hye", "Meredith Broadway"] # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+contact: ["v.ikeshoji-orlati@vanderbilt.edu"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
+collaborative_notes:             # optional: URL for the workshop collaborative notes, e.g. an Etherpad or Google Docs document (c.f. http://pad.software-carpentry.org/liswp)
 eventbrite:           # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
 ---
 
@@ -30,10 +30,10 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 -->
 
 <p>
-	This is a FREE one-day workshop that is open to <a href="http://www.quloc.org.au/">QULOC members</a> only. </p>
-	<p>Please use this link to 
-	<strong><a href="https://register.eventarc.com/39481/quloc-liswp-library-carpentry-workshop">REGISTER FOR THE WORKSHOP</a>.
-	</strong></p>
+	This two-day workshop is open to all. </p>
+	<p>A link to register for the workshop will be made available closer to the event date.
+	<!--<strong><a href="https://register.eventarc.com/39481/quloc-liswp-library-carpentry-workshop">REGISTER FOR THE WORKSHOP</a>.
+	</strong>--></p>
 
 <h2 id="general">General Information</h2>
 
@@ -103,7 +103,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   Modify the block below if there are any special requirements.
 -->
 <p id="requirements">
-  <strong>Requirements:</strong> Participants do not need to bring laptops - the class will be run in a training room equipped with PCs. 
+  <strong>Requirements:</strong> Participants are encouraged to bring their own laptops, though a limited number of laptops will be available for checkout.
 	Particpants are required to abide by
   {% if page.carpentry == "swc" %}
   Software Carpentry's
@@ -128,7 +128,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 </p>
 <ul>
   <li>The room is wheelchair / scooter accessible.</li>
-  <li>Accessible toilets are available.</li>
+  <li>Accessible bathrooms are available.</li>
 </ul>
 
 
