--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ country: "us"      # lowercase two-letter ISO country code such as "fr" (see htt
 language: "en"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "36.145687,-86.800243"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
 humandate: "April 5-6, 2018"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
-humantime: "9:00 am-4:00 pm"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
+humantime: "9:00 am-4:30 pm"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
 startdate: 2018-04-05      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
 enddate: 2018-04-06  # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
 instructor: ["Veronica Ikeshoji-Orlati"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["Elisabeth Shook", "Suellen Stringer-Hye", "Meredith Broadway"] # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+helper: ["Meredith Broadway", "Elisabeth Shook", "Suellen Stringer-Hye"] # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["v.ikeshoji-orlati@vanderbilt.edu"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
 collaborative_notes:             # optional: URL for the workshop collaborative notes, e.g. an Etherpad or Google Docs document (c.f. http://pad.software-carpentry.org/liswp)
 eventbrite:           # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
@@ -104,7 +104,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 -->
 <p id="requirements">
   <strong>Requirements:</strong> Participants are encouraged to bring their own laptops, though a limited number of laptops will be available for checkout.
-	Particpants are required to abide by
+	Participants are required to abide by
   {% if page.carpentry == "swc" %}
   Software Carpentry's
   {% elsif page.carpentry == "dc" %}
@@ -171,17 +171,29 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 
 <div class="row">
   <div class="col-md-6">
-    <h3>Friday, 3 November, 2017</h3>
+    <h3>Thursday, April 5, 2018</h3>
     <table class="table table-striped">
-      <tr> <td>09:30</td>  <td>Welcome, jargon busting, data structures</td> </tr>
-      <tr> <td>11:00</td> <td>Break</td> </tr>
-      <tr> <td>11:30</td> <td>Introducing the shell part 1</td> </tr>
-      <tr> <td>12:30</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:30</td>  <td>Introducing the shell part 2</td> </tr>
-      <tr> <td>14:30</td>  <td>Break</td> </tr>
-      <tr> <td>14:45</td>  <td>OpenRefine for data cleanup</td> </tr>
-      <tr> <td>16:00</td>  <td>Close</td> </tr>
+      <tr> <td>09:00</td> <td>Welcome, jargon busting, data structures</td> </tr>
+      <tr> <td>10:30</td> <td>Break</td> </tr>
+			<tr> <td>11:00</td>	<td>Tidy Data, part 1</td> </tr>
+			<tr> <td>12:00</td> <td>Lunch Break</td> </tr>
+			<tr> <td>13:00</td> <td>Tidy Data, part 2</td> </tr>
+      <tr> <td>14:00</td> <td>Break</td> </tr>
+			<tr> <td>14:30</td> <td>Introducing the shell part 1</td> </tr>
+			<tr> <td>15:30</td> <td>Introducing the shell part 2</td> </tr>
+      <tr> <td>16:15</td> <td>Close</td> </tr>
     </table>
+		<h3>Friday, April 6, 2018</h3>
+		<table class="table table-striped">
+			<tr> <td>09:00</td>	<td>Welcome back, Regular expressions, data-finding exercises</td> </tr>
+			<tr> <td>10:30</td> <td>Break</td> </tr>
+			<tr> <td>11:00</td> <td>Introduction to OpenRefine</td> </tr>
+			<tr> <td>12:00</td> <td>Lunch break</td> </tr>
+			<tr> <td>13:00</td> <td>OpenRefine Transformations, GREL</td>
+			<tr> <td>14:00</td> <td>Break</td> </tr>
+			<tr> <td>14:30</td> <td>Intro to Github</td> </tr>
+			<tr> <td>15:30</td> <td>Github Review, Intro to Github Pages</td> </tr>
+			<tr> <td>14:15</td> <td>Close</td> </tr>
   </div>
 </div>
 
