--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 			<tr> <td>14:30</td> <td>Intro to Github</td> </tr>
 			<tr> <td>15:30</td> <td>Github Review, Intro to Github Pages</td> </tr>
 			<tr> <td>14:15</td> <td>Close</td> </tr>
+		</table>
   </div>
 </div>
 
