--- a/index.html
+++ b/index.html
@@ -173,27 +173,33 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   <div class="col-md-6">
     <h3>Thursday, April 5, 2018</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td> <td>Welcome, jargon busting, data structures</td> </tr>
+      <tr> <td>08:15</td> <td>Breakfast, Laptop Setup</td> </tr>
+      <tr> <td>09:00</td> <td>Welcome, Logistics</td> </tr>
+      <tr> <td>09:30</td> <td>Jargon Busting, Data Structures</td> </tr>
       <tr> <td>10:30</td> <td>Break</td> </tr>
-			<tr> <td>11:00</td>	<td>Tidy Data, part 1</td> </tr>
+			<tr> <td>10:50</td>	<td>Tidy Data, part 1</td> </tr>
 			<tr> <td>12:00</td> <td>Lunch Break</td> </tr>
 			<tr> <td>13:00</td> <td>Tidy Data, part 2</td> </tr>
       <tr> <td>14:00</td> <td>Break</td> </tr>
-			<tr> <td>14:30</td> <td>Introducing the shell part 1</td> </tr>
-			<tr> <td>15:30</td> <td>Introducing the shell part 2</td> </tr>
-      <tr> <td>16:15</td> <td>Close</td> </tr>
+			<tr> <td>14:20</td> <td>What is the Shell?</td> </tr>
+      <tr> <td>15:15</td> <td>Stretch</td> </tr>
+			<tr> <td>15:20</td> <td>What can you do with the Shell?</td> </tr>
+      <tr> <td>16:20</td> <td>Closing Remarks</td> </tr>
     </table>
 		<h3>Friday, April 6, 2018</h3>
 		<table class="table table-striped">
-			<tr> <td>09:00</td>	<td>Welcome back, Regular expressions, data-finding exercises</td> </tr>
+      <tr> <td>08:15</td> <td>Breakfast, Laptop Setup</td> </tr>
+			<tr> <td>09:00</td>	<td>Regular Expressions, Review of Previous Day</td> </tr>
+      <tr> <td>10:00</td> <td>What is OpenRefine?</td> </tr>
 			<tr> <td>10:30</td> <td>Break</td> </tr>
-			<tr> <td>11:00</td> <td>Introduction to OpenRefine</td> </tr>
-			<tr> <td>12:00</td> <td>Lunch break</td> </tr>
+			<tr> <td>10:50</td> <td>OpenRefine Layout, Importing Data, Etc.</td> </tr>
+			<tr> <td>12:00</td> <td>Lunch Break</td> </tr>
 			<tr> <td>13:00</td> <td>OpenRefine Transformations, GREL</td>
 			<tr> <td>14:00</td> <td>Break</td> </tr>
-			<tr> <td>14:30</td> <td>Intro to Github</td> </tr>
-			<tr> <td>15:30</td> <td>Github Review, Intro to Github Pages</td> </tr>
-			<tr> <td>16:15</td> <td>Close</td> </tr>
+			<tr> <td>14:20</td> <td>What is Git/GitHub? Basic Commands</td> </tr>
+      <tr> <td>15:15</td> <td>Stretch</td> </tr>
+			<tr> <td>15:20</td> <td>Git Workflows, Working in Repos</td> </tr>
+			<tr> <td>16:20</td> <td>Closing Remarks, Resources</td> </tr>
 		</table>
   </div>
 </div>
