added location, updated instructors.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS EITHER.  (THANK YOU.)
 carpentry: "lc"    # what kind of Carpentry (must be either "lc" or "dc" or "swc")
 venue: "Jean and Alexander Heard Library, Vanderbilt University"        # brief name of host site without address (e.g., "Euphoric State University")
-address: "Central Library, 419 21st Ave S, Nashville, TN 37240"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
+address: "Community Room, Central Library, 419 21st Ave S, Nashville, TN 37240"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
 country: "us"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
 language: "en"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
 latlng: "36.145687,-86.800243"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
@@ -11,8 +11,7 @@ humandate: "April 5-6, 2018"    # human-readable dates for the workshop (e.g., "
 humantime: "9:00 am-4:30 pm"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
 startdate: 2018-04-05      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
 enddate: 2018-04-06  # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
-instructor: ["Veronica Ikeshoji-Orlati"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: ["Meredith Broadway", "Elisabeth Shook", "Suellen Stringer-Hye"] # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+instructor: ["Veronica Ikeshoji-Orlati", "Meredith Broadway", "Melissa Mallon", "Elisabeth Shook", "Suellen Stringer-Hye"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 contact: ["v.ikeshoji-orlati@vanderbilt.edu"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
 collaborative_notes:             # optional: URL for the workshop collaborative notes, e.g. an Etherpad or Google Docs document (c.f. http://pad.software-carpentry.org/liswp)
 eventbrite:           # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
@@ -31,7 +30,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 
 <p>
 	This two-day workshop is open to all. </p>
-	<p>A link to register for the workshop will be made available closer to the event date.
+	<p>E-mail v.ikeshoji-orlati@vanderbilt.edu to register.
 	<!--<strong><a href="https://register.eventarc.com/39481/quloc-liswp-library-carpentry-workshop">REGISTER FOR THE WORKSHOP</a>.
 	</strong>--></p>
 
